@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-12-12 14:40:09 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-111
+
+    Summary:
+      scripts.icms, fix "init --source"
+    Revision:
+      itools--main--0.12--patch-111
+
+
+    modified files:
+     Changelog scripts/icms.py
+
+
 2005-12-12 13:48:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-110
 
     Summary:
